fix buttons not showing. Better way to change playlist to support shuffle

--- a/example/src/App.scss
+++ b/example/src/App.scss
@@ -64,7 +64,7 @@ h3 {
 }
 
 .aplayer-wrap {
-  width: 600px;
+  width: 100%;
   max-width: 100%;
   margin: 20px 0 40px;
 }
